--- a/Projeto1+Pnad.html
+++ b/Projeto1+Pnad.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head><meta charset="utf-8" />
-<title>Projeto1 Layout (2)</title>
+<title>Projeto1 Pnad</title>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
@@ -12656,664 +12656,7 @@ C:\Users\rafaa\Documents\Insper\DP&#39;s 2º\Dados
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[58]:</div>
-<div class="inner_cell">
-    <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="n">df2015</span><span class="o">.</span><span class="n">dropna</span>
-<span class="n">df2015</span>
-</pre></div>
-
-</div>
-</div>
-</div>
-
-<div class="output_wrapper">
-<div class="output">
-
-
-<div class="output_area"><div class="prompt output_prompt">Out[58]:</div>
-
-<div class="output_html rendered_html output_subarea output_execute_result">
-<div>
-<table border="1" class="dataframe">
-  <thead>
-    <tr style="text-align: right;">
-      <th></th>
-      <th>Sexo</th>
-      <th>Idade do morador na data de referência</th>
-      <th>Sabe ler e escrever</th>
-      <th>Frequenta escola ou creche</th>
-      <th>Já frequentou escola ou creche</th>
-      <th>Rede de ensino</th>
-      <th>Curso que frequenta</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <th>0</th>
-      <td>Masculino</td>
-      <td>23.0</td>
-      <td>Sim</td>
-      <td>Não</td>
-      <td>Sim</td>
-      <td>Pública</td>
-      <td>NaN</td>
-    </tr>
-    <tr>
-      <th>1</th>
-      <td>Feminino</td>
-      <td>23.0</td>
-      <td>Sim</td>
-      <td>Não</td>
-      <td>Sim</td>
-      <td>Privada</td>
-      <td>NaN</td>
-    </tr>
-    <tr>
-      <th>2</th>
-      <td>Feminino</td>
-      <td>35.0</td>
-      <td>Sim</td>
-      <td>Sim</td>
-      <td>NaN</td>
-      <td>Privada</td>
-      <td>Superior de graduação</td>
-    </tr>
-    <tr>
-      <th>3</th>
-      <td>Masculino</td>
-      <td>34.0</td>
-      <td>Sim</td>
-      <td>Não</td>
-      <td>Sim</td>
-      <td>Pública</td>
-      <td>NaN</td>
-    </tr>
-    <tr>
-      <th>4</th>
-      <td>Feminino</td>
-      <td>11.0</td>
-      <td>Sim</td>
-      <td>Sim</td>
-      <td>NaN</td>
-      <td>Privada</td>
-      <td>Regular do ensino fundamental</td>
-    </tr>
-    <tr>
-      <th>5</th>
-      <td>Feminino</td>
-      <td>7.0</td>
-      <td>Sim</td>
-      <td>Sim</td>
-      <td>NaN</td>
-      <td>Privada</td>
-      <td>Regular do ensino fundamental</td>
-    </tr>
-    <tr>
-      <th>6</th>
-      <td>Feminino</td>
-      <td>4.0</td>
-      <td>Não</td>
-      <td>Sim</td>
-      <td>NaN</td>
-      <td>Privada</td>
-      <td>Creche</td>
-    </tr>
-    <tr>
-      <th>7</th>
-      <td>Feminino</td>
-      <td>18.0</td>
-      <td>Sim</td>
-      <td>Não</td>
-      <td>Sim</td>
-      <td>Privada</td>
-      <td>NaN</td>
-    </tr>
-    <tr>
-      <th>8</th>
-      <td>Masculino</td>
-      <td>46.0</td>
-      <td>Sim</td>
-      <td>Não</td>
-      <td>Sim</td>
-      <td>Pública</td>
-      <td>NaN</td>
-    </tr>
-    <tr>
-      <th>9</th>
-      <td>Feminino</td>
-      <td>81.0</td>
-      <td>Sim</td>
-      <td>Não</td>
-      <td>Sim</td>
-      <td>Privada</td>
-      <td>NaN</td>
-    </tr>
-    <tr>
-      <th>10</th>
-      <td>Feminino</td>
-      <td>71.0</td>
-      <td>Sim</td>
-      <td>Não</td>
-      <td>Sim</td>
-      <td>Privada</td>
-      <td>NaN</td>
-    </tr>
-    <tr>
-      <th>11</th>
-      <td>Feminino</td>
-      <td>47.0</td>
-      <td>Sim</td>
-      <td>Não</td>
-      <td>Sim</td>
-      <td>Privada</td>
-      <td>NaN</td>
-    </tr>
-    <tr>
-      <th>12</th>
-      <td>Masculino</td>
-      <td>24.0</td>
-      <td>Sim</td>
-      <td>Não</td>
-      <td>Sim</td>
-      <td>Pública</td>
-      <td>NaN</td>
-    </tr>
-    <tr>
-      <th>13</th>
-      <td>Feminino</td>
-      <td>28.0</td>
-      <td>Sim</td>
-      <td>Não</td>
-      <td>Sim</td>
-      <td>Privada</td>
-      <td>NaN</td>
-    </tr>
-    <tr>
-      <th>14</th>
-      <td>Masculino</td>
-      <td>50.0</td>
-      <td>Sim</td>
-      <td>Não</td>
-      <td>Sim</td>
-      <td>Pública</td>
-      <td>NaN</td>
-    </tr>
-    <tr>
-      <th>15</th>
-      <td>Masculino</td>
-      <td>1.0</td>
-      <td>Não</td>
-      <td>Não</td>
-      <td>Não</td>
-      <td>Pública</td>
-      <td>NaN</td>
-    </tr>
-    <tr>
-      <th>16</th>
-      <td>Feminino</td>
-      <td>34.0</td>
-      <td>Sim</td>
-      <td>Não</td>
-      <td>Sim</td>
-      <td>Privada</td>
-      <td>NaN</td>
-    </tr>
-    <tr>
-      <th>17</th>
-      <td>Masculino</td>
-      <td>35.0</td>
-      <td>Sim</td>
-      <td>Não</td>
-      <td>Sim</td>
-      <td>Pública</td>
-      <td>NaN</td>
-    </tr>
-    <tr>
-      <th>18</th>
-      <td>Masculino</td>
-      <td>16.0</td>
-      <td>Sim</td>
-      <td>Não</td>
-      <td>Sim</td>
-      <td>Pública</td>
-      <td>NaN</td>
-    </tr>
-    <tr>
-      <th>19</th>
-      <td>Feminino</td>
-      <td>11.0</td>
-      <td>Sim</td>
-      <td>Sim</td>
-      <td>NaN</td>
-      <td>Privada</td>
-      <td>Regular do ensino fundamental</td>
-    </tr>
-    <tr>
-      <th>20</th>
-      <td>Feminino</td>
-      <td>3.0</td>
-      <td>Não</td>
-      <td>Não</td>
-      <td>Não</td>
-      <td>Privada</td>
-      <td>NaN</td>
-    </tr>
-    <tr>
-      <th>21</th>
-      <td>Masculino</td>
-      <td>57.0</td>
-      <td>Sim</td>
-      <td>Não</td>
-      <td>Sim</td>
-      <td>Pública</td>
-      <td>NaN</td>
-    </tr>
-    <tr>
-      <th>22</th>
-      <td>Feminino</td>
-      <td>51.0</td>
-      <td>Sim</td>
-      <td>Não</td>
-      <td>Sim</td>
-      <td>Privada</td>
-      <td>NaN</td>
-    </tr>
-    <tr>
-      <th>23</th>
-      <td>Masculino</td>
-      <td>16.0</td>
-      <td>Sim</td>
-      <td>Sim</td>
-      <td>NaN</td>
-      <td>Pública</td>
-      <td>Regular do ensino médio</td>
-    </tr>
-    <tr>
-      <th>24</th>
-      <td>Feminino</td>
-      <td>60.0</td>
-      <td>Sim</td>
-      <td>Não</td>
-      <td>Sim</td>
-      <td>Privada</td>
-      <td>NaN</td>
-    </tr>
-    <tr>
-      <th>25</th>
-      <td>Feminino</td>
-      <td>50.0</td>
-      <td>Sim</td>
-      <td>Sim</td>
-      <td>NaN</td>
-      <td>Privada</td>
-      <td>Superior de graduação</td>
-    </tr>
-    <tr>
-      <th>26</th>
-      <td>Feminino</td>
-      <td>30.0</td>
-      <td>Sim</td>
-      <td>Não</td>
-      <td>Sim</td>
-      <td>Privada</td>
-      <td>NaN</td>
-    </tr>
-    <tr>
-      <th>27</th>
-      <td>Masculino</td>
-      <td>26.0</td>
-      <td>Sim</td>
-      <td>Não</td>
-      <td>Sim</td>
-      <td>Pública</td>
-      <td>NaN</td>
-    </tr>
-    <tr>
-      <th>28</th>
-      <td>Feminino</td>
-      <td>20.0</td>
-      <td>Sim</td>
-      <td>Não</td>
-      <td>Sim</td>
-      <td>Privada</td>
-      <td>NaN</td>
-    </tr>
-    <tr>
-      <th>29</th>
-      <td>Feminino</td>
-      <td>1.0</td>
-      <td>Não</td>
-      <td>Não</td>
-      <td>Não</td>
-      <td>Privada</td>
-      <td>NaN</td>
-    </tr>
-    <tr>
-      <th>...</th>
-      <td>...</td>
-      <td>...</td>
-      <td>...</td>
-      <td>...</td>
-      <td>...</td>
-      <td>...</td>
-      <td>...</td>
-    </tr>
-    <tr>
-      <th>356874</th>
-      <td>Masculino</td>
-      <td>15.0</td>
-      <td>Sim</td>
-      <td>Sim</td>
-      <td>NaN</td>
-      <td>Pública</td>
-      <td>Regular do ensino fundamental</td>
-    </tr>
-    <tr>
-      <th>356875</th>
-      <td>Masculino</td>
-      <td>54.0</td>
-      <td>Não</td>
-      <td>Não</td>
-      <td>Não</td>
-      <td>Pública</td>
-      <td>NaN</td>
-    </tr>
-    <tr>
-      <th>356876</th>
-      <td>Feminino</td>
-      <td>47.0</td>
-      <td>Não</td>
-      <td>Não</td>
-      <td>Sim</td>
-      <td>Privada</td>
-      <td>NaN</td>
-    </tr>
-    <tr>
-      <th>356877</th>
-      <td>Feminino</td>
-      <td>24.0</td>
-      <td>Sim</td>
-      <td>Não</td>
-      <td>Sim</td>
-      <td>Privada</td>
-      <td>NaN</td>
-    </tr>
-    <tr>
-      <th>356878</th>
-      <td>Masculino</td>
-      <td>22.0</td>
-      <td>Sim</td>
-      <td>Não</td>
-      <td>Sim</td>
-      <td>Pública</td>
-      <td>NaN</td>
-    </tr>
-    <tr>
-      <th>356879</th>
-      <td>Masculino</td>
-      <td>20.0</td>
-      <td>Sim</td>
-      <td>Não</td>
-      <td>Sim</td>
-      <td>Pública</td>
-      <td>NaN</td>
-    </tr>
-    <tr>
-      <th>356880</th>
-      <td>Feminino</td>
-      <td>28.0</td>
-      <td>Sim</td>
-      <td>Não</td>
-      <td>Sim</td>
-      <td>Privada</td>
-      <td>NaN</td>
-    </tr>
-    <tr>
-      <th>356881</th>
-      <td>Masculino</td>
-      <td>30.0</td>
-      <td>Sim</td>
-      <td>Não</td>
-      <td>Sim</td>
-      <td>Pública</td>
-      <td>NaN</td>
-    </tr>
-    <tr>
-      <th>356882</th>
-      <td>Feminino</td>
-      <td>31.0</td>
-      <td>Sim</td>
-      <td>Não</td>
-      <td>Sim</td>
-      <td>Privada</td>
-      <td>NaN</td>
-    </tr>
-    <tr>
-      <th>356883</th>
-      <td>Masculino</td>
-      <td>9.0</td>
-      <td>Sim</td>
-      <td>Sim</td>
-      <td>NaN</td>
-      <td>Pública</td>
-      <td>Regular do ensino fundamental</td>
-    </tr>
-    <tr>
-      <th>356884</th>
-      <td>Feminino</td>
-      <td>4.0</td>
-      <td>Não</td>
-      <td>Sim</td>
-      <td>NaN</td>
-      <td>Privada</td>
-      <td>Creche</td>
-    </tr>
-    <tr>
-      <th>356885</th>
-      <td>Masculino</td>
-      <td>32.0</td>
-      <td>Sim</td>
-      <td>Não</td>
-      <td>Sim</td>
-      <td>Pública</td>
-      <td>NaN</td>
-    </tr>
-    <tr>
-      <th>356886</th>
-      <td>Feminino</td>
-      <td>30.0</td>
-      <td>Sim</td>
-      <td>Não</td>
-      <td>Sim</td>
-      <td>Privada</td>
-      <td>NaN</td>
-    </tr>
-    <tr>
-      <th>356887</th>
-      <td>Feminino</td>
-      <td>4.0</td>
-      <td>Não</td>
-      <td>Sim</td>
-      <td>NaN</td>
-      <td>Privada</td>
-      <td>Maternal, jardim de infância etc.</td>
-    </tr>
-    <tr>
-      <th>356888</th>
-      <td>Masculino</td>
-      <td>1.0</td>
-      <td>Não</td>
-      <td>Não</td>
-      <td>Não</td>
-      <td>Pública</td>
-      <td>NaN</td>
-    </tr>
-    <tr>
-      <th>356889</th>
-      <td>Feminino</td>
-      <td>34.0</td>
-      <td>Sim</td>
-      <td>Sim</td>
-      <td>NaN</td>
-      <td>Privada</td>
-      <td>Regular do ensino fundamental</td>
-    </tr>
-    <tr>
-      <th>356890</th>
-      <td>Feminino</td>
-      <td>9.0</td>
-      <td>Sim</td>
-      <td>Sim</td>
-      <td>NaN</td>
-      <td>Privada</td>
-      <td>Regular do ensino fundamental</td>
-    </tr>
-    <tr>
-      <th>356891</th>
-      <td>Masculino</td>
-      <td>6.0</td>
-      <td>Não</td>
-      <td>Sim</td>
-      <td>NaN</td>
-      <td>Pública</td>
-      <td>Regular do ensino fundamental</td>
-    </tr>
-    <tr>
-      <th>356892</th>
-      <td>Masculino</td>
-      <td>5.0</td>
-      <td>Não</td>
-      <td>Sim</td>
-      <td>NaN</td>
-      <td>Pública</td>
-      <td>Maternal, jardim de infância etc.</td>
-    </tr>
-    <tr>
-      <th>356893</th>
-      <td>Masculino</td>
-      <td>2.0</td>
-      <td>Não</td>
-      <td>Não</td>
-      <td>Não</td>
-      <td>Pública</td>
-      <td>NaN</td>
-    </tr>
-    <tr>
-      <th>356894</th>
-      <td>Feminino</td>
-      <td>57.0</td>
-      <td>Não</td>
-      <td>Não</td>
-      <td>Não</td>
-      <td>Privada</td>
-      <td>NaN</td>
-    </tr>
-    <tr>
-      <th>356895</th>
-      <td>Feminino</td>
-      <td>36.0</td>
-      <td>Sim</td>
-      <td>Não</td>
-      <td>Sim</td>
-      <td>Privada</td>
-      <td>NaN</td>
-    </tr>
-    <tr>
-      <th>356896</th>
-      <td>Feminino</td>
-      <td>18.0</td>
-      <td>Sim</td>
-      <td>Não</td>
-      <td>Sim</td>
-      <td>Privada</td>
-      <td>NaN</td>
-    </tr>
-    <tr>
-      <th>356897</th>
-      <td>Masculino</td>
-      <td>57.0</td>
-      <td>Sim</td>
-      <td>Não</td>
-      <td>Sim</td>
-      <td>Pública</td>
-      <td>NaN</td>
-    </tr>
-    <tr>
-      <th>356898</th>
-      <td>Feminino</td>
-      <td>33.0</td>
-      <td>Sim</td>
-      <td>Não</td>
-      <td>Sim</td>
-      <td>Privada</td>
-      <td>NaN</td>
-    </tr>
-    <tr>
-      <th>356899</th>
-      <td>Masculino</td>
-      <td>38.0</td>
-      <td>Sim</td>
-      <td>Não</td>
-      <td>Sim</td>
-      <td>Pública</td>
-      <td>NaN</td>
-    </tr>
-    <tr>
-      <th>356900</th>
-      <td>Feminino</td>
-      <td>39.0</td>
-      <td>Sim</td>
-      <td>Não</td>
-      <td>Sim</td>
-      <td>Privada</td>
-      <td>NaN</td>
-    </tr>
-    <tr>
-      <th>356901</th>
-      <td>Feminino</td>
-      <td>17.0</td>
-      <td>Sim</td>
-      <td>Sim</td>
-      <td>NaN</td>
-      <td>Privada</td>
-      <td>Regular do ensino médio</td>
-    </tr>
-    <tr>
-      <th>356902</th>
-      <td>Feminino</td>
-      <td>15.0</td>
-      <td>Sim</td>
-      <td>Sim</td>
-      <td>NaN</td>
-      <td>Privada</td>
-      <td>Regular do ensino médio</td>
-    </tr>
-    <tr>
-      <th>356903</th>
-      <td>Feminino</td>
-      <td>7.0</td>
-      <td>Sim</td>
-      <td>Sim</td>
-      <td>NaN</td>
-      <td>Privada</td>
-      <td>Regular do ensino fundamental</td>
-    </tr>
-  </tbody>
-</table>
-<p>356904 rows × 7 columns</p>
-</div>
-</div>
-
-</div>
-
-</div>
-</div>
-
-</div>
-<div class="cell border-box-sizing code_cell rendered">
-<div class="input">
-<div class="prompt input_prompt">In&nbsp;[72]:</div>
+<div class="prompt input_prompt">In&nbsp;[1]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">df2015</span><span class="p">[(</span><span class="n">df2015</span><span class="o">.</span><span class="n">Sexo</span><span class="o">==</span><span class="s1">&#39;Feminino&#39;</span><span class="p">)</span><span class="o">|</span><span class="p">(</span><span class="n">df2015</span><span class="o">.</span><span class="n">Frequenta</span> <span class="n">escola</span> <span class="n">ou</span> <span class="n">creche</span><span class="o">==</span><span class="s1">&#39;Sim&#39;</span><span class="p">)]</span>
@@ -13332,7 +12675,7 @@ C:\Users\rafaa\Documents\Insper\DP&#39;s 2º\Dados
 <div class="output_area"><div class="prompt"></div>
 <div class="output_subarea output_text output_error">
 <pre>
-<span class="ansi-cyan-fg">  File </span><span class="ansi-green-fg">&#34;&lt;ipython-input-72-6f5f65af6d33&gt;&#34;</span><span class="ansi-cyan-fg">, line </span><span class="ansi-green-fg">1</span>
+<span class="ansi-cyan-fg">  File </span><span class="ansi-green-fg">&#34;&lt;ipython-input-1-6f5f65af6d33&gt;&#34;</span><span class="ansi-cyan-fg">, line </span><span class="ansi-green-fg">1</span>
 <span class="ansi-red-fg">    df2015[(df2015.Sexo==&#39;Feminino&#39;)|(df2015.Frequenta escola ou creche==&#39;Sim&#39;)]</span>
                                                             ^
 <span class="ansi-red-fg">SyntaxError</span><span class="ansi-red-fg">:</span> invalid syntax
